// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Role creation should fail when canReadAllObjectRecords is false but canDestroyAllObjectRecords is true 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "agent": [],
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [],
      "index": [],
      "objectMetadata": [],
      "pageLayoutTab": [],
      "pageLayoutWidget": [],
      "role": [
        {
          "errors": [
            {
              "code": "CANNOT_GIVE_WRITING_PERMISSION_WITHOUT_READING_PERMISSION",
              "message": "Cannot give writing permission without reading permission",
              "userFriendlyMessage": "You cannot grant edit permissions without also granting read permissions. Please enable read access first.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "label": "Inconsistent Destroy Role",
          },
          "status": "fail",
          "type": "create_role",
        },
      ],
      "roleTarget": [],
      "routeTrigger": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [],
      "viewFilter": [],
      "viewGroup": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidAgent": 0,
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidPageLayoutTab": 0,
      "invalidPageLayoutWidget": 0,
      "invalidRole": 0,
      "invalidRoleTarget": 0,
      "invalidRouteTrigger": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "invalidViewFilter": 0,
      "invalidViewGroup": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating role",
  "name": "GraphQLError",
}
`;

exports[`Role creation should fail when canReadAllObjectRecords is false but canSoftDeleteAllObjectRecords is true 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "agent": [],
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [],
      "index": [],
      "objectMetadata": [],
      "pageLayoutTab": [],
      "pageLayoutWidget": [],
      "role": [
        {
          "errors": [
            {
              "code": "CANNOT_GIVE_WRITING_PERMISSION_WITHOUT_READING_PERMISSION",
              "message": "Cannot give writing permission without reading permission",
              "userFriendlyMessage": "You cannot grant edit permissions without also granting read permissions. Please enable read access first.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "label": "Inconsistent Soft Delete Role",
          },
          "status": "fail",
          "type": "create_role",
        },
      ],
      "roleTarget": [],
      "routeTrigger": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [],
      "viewFilter": [],
      "viewGroup": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidAgent": 0,
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidPageLayoutTab": 0,
      "invalidPageLayoutWidget": 0,
      "invalidRole": 0,
      "invalidRoleTarget": 0,
      "invalidRouteTrigger": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "invalidViewFilter": 0,
      "invalidViewGroup": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating role",
  "name": "GraphQLError",
}
`;

exports[`Role creation should fail when canReadAllObjectRecords is false but canUpdateAllObjectRecords is true 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "agent": [],
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [],
      "index": [],
      "objectMetadata": [],
      "pageLayoutTab": [],
      "pageLayoutWidget": [],
      "role": [
        {
          "errors": [
            {
              "code": "CANNOT_GIVE_WRITING_PERMISSION_WITHOUT_READING_PERMISSION",
              "message": "Cannot give writing permission without reading permission",
              "userFriendlyMessage": "You cannot grant edit permissions without also granting read permissions. Please enable read access first.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "label": "Inconsistent Update Role",
          },
          "status": "fail",
          "type": "create_role",
        },
      ],
      "roleTarget": [],
      "routeTrigger": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [],
      "viewFilter": [],
      "viewGroup": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidAgent": 0,
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidPageLayoutTab": 0,
      "invalidPageLayoutWidget": 0,
      "invalidRole": 0,
      "invalidRoleTarget": 0,
      "invalidRouteTrigger": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "invalidViewFilter": 0,
      "invalidViewGroup": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating role",
  "name": "GraphQLError",
}
`;

exports[`Role creation should fail when canReadAllObjectRecords is false but multiple write permissions are true 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "agent": [],
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [],
      "index": [],
      "objectMetadata": [],
      "pageLayoutTab": [],
      "pageLayoutWidget": [],
      "role": [
        {
          "errors": [
            {
              "code": "CANNOT_GIVE_WRITING_PERMISSION_WITHOUT_READING_PERMISSION",
              "message": "Cannot give writing permission without reading permission",
              "userFriendlyMessage": "You cannot grant edit permissions without also granting read permissions. Please enable read access first.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "label": "Inconsistent Multiple Write Role",
          },
          "status": "fail",
          "type": "create_role",
        },
      ],
      "roleTarget": [],
      "routeTrigger": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [],
      "viewFilter": [],
      "viewGroup": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidAgent": 0,
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidPageLayoutTab": 0,
      "invalidPageLayoutWidget": 0,
      "invalidRole": 0,
      "invalidRoleTarget": 0,
      "invalidRouteTrigger": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "invalidViewFilter": 0,
      "invalidViewGroup": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating role",
  "name": "GraphQLError",
}
`;

exports[`Role creation should fail when label already exists 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "agent": [],
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [],
      "index": [],
      "objectMetadata": [],
      "pageLayoutTab": [],
      "pageLayoutWidget": [],
      "role": [
        {
          "errors": [
            {
              "code": "ROLE_LABEL_ALREADY_EXISTS",
              "message": "A role with this label already exists",
              "userFriendlyMessage": "A role with this label already exists.",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "label": "Existing Test Role",
          },
          "status": "fail",
          "type": "create_role",
        },
      ],
      "roleTarget": [],
      "routeTrigger": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [],
      "viewFilter": [],
      "viewGroup": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidAgent": 0,
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidPageLayoutTab": 0,
      "invalidPageLayoutWidget": 0,
      "invalidRole": 0,
      "invalidRoleTarget": 0,
      "invalidRouteTrigger": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "invalidViewFilter": 0,
      "invalidViewGroup": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating role",
  "name": "GraphQLError",
}
`;

exports[`Role creation should fail when label is missing 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Field "label" of required type "String!" was not provided.",
  "name": "GraphQLError",
}
`;
